# hubuum-cli

./: .dockerignore  AGENTS.md  CHANGELOG.md  COMPATIBILITY.md  Cargo.toml  Dockerfile  README.md  RELEASE.md  build.rs
.github/workflows/: ci.yml
cli_command_derive/: Cargo.toml
cli_command_derive/src/: lib.rs
crates/hubuum-filter/: Cargo.toml
crates/hubuum-filter/src/: error.rs  eval.rs  lib.rs  model.rs  parse.rs  selector.rs  tests.rs  verb_info.rs
crates/hubuum-filter/src/verbs/: collection.rs  jq.rs  mod.rs  project.rs  search.rs
crates/hubuum-theme/: Cargo.toml
crates/hubuum-theme/src/: lib.rs
docs/: DSL.md  ansible-facts.md  manual-test-0.0.3.md  manual-test.md  output-pipeline.md  themes.md
docs/superpowers/plans/: 2026-06-28-client-0.0.3-adaptation.md
docs/superpowers/specs/: 2026-06-28-client-0.0.3-adaptation-design.md
scripts/: check-release-readiness.sh  check-version-bump.sh  extract-changelog-section.sh  prepare-release.sh  release.sh
src/: app.rs  autocomplete.rs  background.rs  build_info.rs  catalog.rs  cli.rs  command_line.rs  commandlist.rs  config.rs  defaults.rs  dispatch.rs  domain.rs  errors.rs  files.rs  json_schema.rs  list_query.rs  logger.rs  main.rs  output.rs  redirection.rs  repl.rs  services.rs  suggestions.rs  terminal.rs  theme.rs  tokenizer.rs  traits.rs
src/autocomplete/: classes.rs  collections.rs  events.rs  exports.rs  filters.rs  groups.rs  mod.rs  namespaces.rs  objects.rs  reports.rs  shared.rs  sorts.rs
src/commands/: admin.rs  audit.rs  auth.rs  backup.rs  bg.rs  builder.rs  class.rs  collection.rs  computed.rs  config.rs  event_delivery.rs  event_sink.rs  event_subscription.rs  export.rs  group.rs  help.rs  history.rs  imports.rs  jobs.rs  me.rs  metrics.rs  mod.rs  namespace.rs  object.rs  relations.rs  remote_target.rs  report.rs  search.rs  service_account.rs  task.rs  task_submit.rs  theme.rs  user.rs  version.rs
src/commands/shared/: mod.rs
src/domain/: backups.rs  classes.rs  collections.rs  computed.rs  events.rs  exports.rs  groups.rs  identity.rs  imports.rs  mod.rs  namespaces.rs  object_fields.rs  objects.rs  relations.rs  remote_targets.rs  reports.rs  search.rs  task_output.rs  tasks.rs  users.rs
src/formatting/: background.rs  class.rs  classes.rs  collections.rs  computed.rs  core.rs  exports.rs  group.rs  groups.rs  identity.rs  imports.rs  mod.rs  namespace.rs  namespaces.rs  object.rs  objects.rs  relations.rs  reports.rs  service_accounts.rs  tasks.rs  user.rs  users.rs
src/models/: auth.rs  internal.rs  mod.rs  output.rs  relation.rs  responses.rs
src/services/: completion.rs  gateway.rs  mod.rs
src/services/gateway/: admin.rs  backups.rs  classes.rs  collections.rs  computed.rs  events.rs  exports.rs  groups.rs  identity.rs  imports.rs  mod.rs  namespaces.rs  objects.rs  relations.rs  remote_targets.rs  reports.rs  search.rs  service_accounts.rs  settings.rs  shared.rs  tasks.rs  users.rs
tests/: cli_smoke.rs  cli_startup.rs
