[package]
name = "hubuum-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "15"
cli_command_derive = { path = "./cli_command_derive" }
thiserror = "2"
tracing-subscriber = { version = "0", features = ["fmt", "env-filter"] }
log = "0"
shlex = "1"
reqwest = { version = "0", features = ["blocking"] }
chrono = { version = "0", features = ["serde"] }
once_cell = "1"
regex = "1"
lazy_static = "1"
colored = "2"
anyhow = "1"
dirs = "5"
config = "0"
clap = { version = "4", features = ["derive"] }
hubuum_client = { path = "../hubuum-client-rust" }
rpassword = "7"
rand = "0"
tabled = "0.17"
jqesque = "0.0.2"
jsonpath-rust = "0"
smooth-json = "0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
