[package]
name = "hubuum-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cli_command_derive = { path = "./cli_command_derive" }
thiserror = "2"
tracing-subscriber = { version = "0", features = ["fmt", "env-filter"] }
log = "0"
shlex = "1"
reqwest = { version = "0", features = ["blocking"] }
chrono = { version = "0", features = ["serde"] }
once_cell = "1"
regex = "1"
lazy_static = "1"
colored = "3"
anyhow = "1"
dirs = "6"
config = "0"
clap = { version = "4", features = ["derive", "env"] }
hubuum_client = "0.0.2"
rpassword = "7"
rand = "0"
jqesque = "0.0.3"
jsonpath-rust = "1"
smooth-json = "0"
serial_test = "3.4"
strum = { version = "0.28", features = ["derive", "strum_macros"] }
async-trait = "0.1"
reedline = "0.46"
tokio = { version = "1", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "sync",
] }
comfy-table = "7"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
portable-pty = "0.9"
predicates = "3"
tempfile = "3"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
