[package]
name = "hubuum-filter"
version = "0.1.0"
edition = "2021"
description = "Pipeline parsing and filtering primitives for Hubuum CLI output"
license = "MIT"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
thiserror = "2"
jqesque = "0.0.3"
